<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>mc.dailycraft</groupId>
    <artifactId>advancedspyinventory-parent</artifactId>
    <packaging>pom</packaging>
    <version>2.4.12</version>

    <name>AdvancedSpyInventory</name>
    <url>https://www.curseforge.com/minecraft/bukkit-plugins/advancedspyinventory</url>
    <description>Open and modify the inventory of entities and players, and the ender chest of the players, online or not!</description>

    <modules>
        <module>main</module>
        <module>v1_21_R7</module>
        <module>dist</module>
    </modules>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <minecraftVersion>unknown</minecraftVersion>
    </properties>
</project>